20251007 v0.0.54 Fixed Footer Visibility

--- a/public/style.css
+++ b/public/style.css
@@ -570,7 +570,7 @@ header {
 .clock-controls button, .play-clock-controls button {
     font-size: 18px;
     font-weight:600;
-    padding: 8px 20px 12px 20px;
+    padding: 8px 20px 8px 20px;
 }
 
 .reset-btn {
@@ -1028,7 +1028,7 @@ li {
 }
 
 /* 3. Hide sections that don't need to be visible */
-.clock-btn.disabled, .score-btn.disabled, .undo-btn.disabled, .end-game-btn.disabled, .adjust-btn.disabled, .play-clock-options.disabled, .share-links-section.disabled, #start-new-game-from-summary-btn.disabled, #info-btn.disabled, #undo-btn.disabled, #penalty-lookup-btn.disabled, #end-game-btn.disabled, #share-links-btn.disabled
+.clock-btn.disabled, .score-btn.disabled, .undo-btn.disabled, .end-game-btn.disabled, .adjust-btn.disabled, .play-clock-options.disabled, .share-links-section.disabled, #start-new-game-from-summary-btn.disabled, #info-btn.disabled, #undo-btn.disabled, #penalty-lookup-btn.disabled, #end-game-btn.disabled, #share-links-btn.disabled, #fixed-footer-links-container.disabled
  {
     display: none !important;
 }
